--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body {
 
 .container {
     width: 100%;
-    height: 1150px;
+    height: 100vh;
     background: lightgray;
     display: flex;
     justify-content: center;
